@@ -1,3 +1,3 @@
 include COPYING ChangeLog Makefile pykickstart.spec
 recursive-include po *.po *.pot Makefile
-recursive-include docs programmers-guide
+recursive-include docs programmers-guide kickstart-docs.txt
