@@ -13,22 +13,25 @@ default: all
 all:
 	$(MAKE) -C po
 
+docs:
+	curl -A "pykickstart-build" -o docs/kickstart-docs.txt "http://fedoraproject.org/wiki/AnacondaKickstart?action=raw"
+
 check:
 	PYTHONPATH=. pychecker $(PYCHECKEROPTS) pykickstart/*.py pykickstart/commands/*.py pykickstart/handlers/*.py
 
 clean:
-	-rm *.tar.gz pykickstart/*.pyc pykickstart/commands/*.pyc pykickstart/handlers/*.pyc
+	-rm *.tar.gz pykickstart/*.pyc pykickstart/commands/*.pyc pykickstart/handlers/*.pyc docs/kickstart-docs.txt
 	$(MAKE) -C po clean
 	python setup.py -q clean --all
 
-install: all
+install: all docs
 	python setup.py install --root=$(DESTDIR)
 	$(MAKE) -C po install
 
 tag:
 	cvs tag -FR $(CVSTAG)
 
-archive: tag
+archive: tag docs
 	@rm -rf /tmp/${PKGNAME}-$(VERSION) /tmp/${PKGNAME}
 	@CVSROOT=`cat CVS/Root`; cd /tmp; cvs -d $$CVSROOT export -r$(CVSTAG) ${PKGNAME}
 	@mv /tmp/${PKGNAME} /tmp/${PKGNAME}-$(VERSION)
@@ -37,7 +40,7 @@ archive: tag
 	@rm -rf /tmp/${PKGNAME}-$(VERSION)
 	@echo "The archive is in ${PKGNAME}-$(VERSION).tar.gz"
 
-local:
+local: docs
 	@rm -rf ${PKGNAME}-$(VERSION).tar.gz
 	@rm -rf /tmp/${PKGNAME}-$(VERSION) /tmp/${PKGNAME}
 	@dir=$$PWD; cp -a $$dir /tmp/${PKGNAME}-$(VERSION)
@@ -45,3 +48,5 @@ local:
 	@cp /tmp/${PKGNAME}-$(VERSION)/dist/${PKGNAME}-$(VERSION).tar.gz .
 	@rm -rf /tmp/${PKGNAME}-$(VERSION)	
 	@echo "The archive is in ${PKGNAME}-$(VERSION).tar.gz"
+
+.PHONY: check clean install tag archive local docs
